@@ -23,6 +23,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   e - add nodeid to pbsnodes XML output (NCIFCRF)
   e - add --about support to daemons and client commands
   e - added qsub -t (primitive job array)
+  e - add PBS_RESOURCE_GRES to prolog/epilog environment
 
 2.1.7
   b - fix bison syntax error in Parser.y
